# rental_car

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  api.py  main.py
backend/app/apps/: __init__.py
backend/app/apps/admin/: __init__.py  deps.py  router.py  schemas.py  service.py
backend/app/apps/auth/: __init__.py  router.py  schemas.py  service.py
backend/app/apps/cities/: __init__.py  router.py  schemas.py  service.py
backend/app/apps/identity/: __init__.py  router.py  schemas.py  service.py
backend/app/apps/orders/: __init__.py  router.py  schemas.py  service.py
backend/app/apps/payments/: __init__.py  router.py  schemas.py  service.py
backend/app/apps/system/: __init__.py  router.py  schemas.py  service.py
backend/app/apps/users/: __init__.py  deps.py  router.py  schemas.py  service.py
backend/app/apps/vehicles/: __init__.py  router.py  schemas.py  service.py
backend/app/apps/wholesale_orders/: __init__.py  router.py  schemas.py  service.py
backend/app/core/: config.py  logging.py  middleware.py
backend/app/integrations/: __init__.py
backend/app/integrations/wechat/: __init__.py  payments.py
backend/tests/apps/admin/: test_admin_api.py
backend/tests/apps/auth/: test_customer_auth_api.py
backend/tests/apps/cities/: test_city_config_api.py
backend/tests/apps/identity/: test_identity_api.py
backend/tests/apps/orders/: test_customer_order_dispatch_api.py  test_order_confirm_api.py
backend/tests/apps/payments/: test_payment_api.py
backend/tests/apps/system/: test_health_api.py
(+743 files in other folders)
