[project]
name = "rental-car-backend"
version = "0.1.0"
description = "FastAPI backend for 山海放心租"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "pydantic-settings>=2.5.0,<3.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "tests*"]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "pytest>=8.0.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "ruff>=0.6.0,<1.0.0",
  "mypy>=1.11.0,<2.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
plugins = []
strict = true
ignore_missing_imports = true
